--- a/index.html
+++ b/index.html
@@ -1,27 +1,42 @@
 <!DOCTYPE html>
-<html data-wf-domain="www.generative-world-explorer.github.io" data-wf-page="666c58d81e64e2eb5bdf9549" data-wf-site="666c58d71e64e2eb5bdf950b"
-  lang="en">
+<html data-wf-domain="www.generative-world-explorer.github.io" data-wf-page="666c58d81e64e2eb5bdf9549"
+  data-wf-site="666c58d71e64e2eb5bdf950b" lang="en">
 
 <head>
   <meta charset="utf-8">
   <title>Generative World Explorer</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
-  <!-- <script
-    type="text/javascript">WebFont.load({ google: { families: ["Ubuntu:300,300italic,400,400italic,500,500italic,700,700italic", "Inconsolata:400,700"] } });</script>
-  <script
-    type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script> -->
+
+  <!-- Preload fonts -->
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@700&display=swap" as="style"
+    crossorigin="anonymous">
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400&display=swap" as="style"
+    crossorigin="anonymous">
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Candara&display=swap" as="style"
+    crossorigin="anonymous">
+
+  <!-- Load fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@700&display=swap" rel="stylesheet"
+    crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400&display=swap" rel="stylesheet"
+    crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css2?family=Candara&display=swap" rel="stylesheet" crossorigin="anonymous">
+
+  <!-- Load CSS (without defer to ensure it's applied immediately) -->
   <link href="css/min.css" rel="stylesheet" type="text/css">
   <link href="css/style.css" rel="stylesheet" type="text/css">
-
-
-
-  <!-- [Attributes by Finsweet] Disable scrolling -->
-  <!-- <script defer src="https://cdn.jsdelivr.net/npm/@finsweet/attributes-scrolldisable@1/scrolldisable.js"></script> -->
-  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@700&display=swap" as="font" type="font/woff2" crossorigin="anonymous">
-  <link rel="preload" href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400&display=swap" as="font" type="font/woff2" crossorigin="anonymous">
-  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Candara&display=swap" as="font" type="font/woff2" crossorigin="anonymous">
-
 </head>
+
+<body class="body_home">
+  <!-- Page content here -->
+
+  <!-- Defer JavaScript files -->
+  <script src="js/jquery-3.5.1.min.js" type="text/javascript" defer></script>
+  <script src="js/webflow.a53fcacf4.js" type="text/javascript" defer></script>
+  <script src="script.js" type="text/javascript" defer></script>
+</body>
+
+
 
 
 <body class="body_home">
@@ -29,15 +44,14 @@
   <div class="page-wrapper">
     <div class="global-styles w-embed"></div>
     <div data-animation="default" class="navbar_component w-nav" data-easing2="ease"
-    fs-scrolldisable-element="smart-nav" data-easing="ease" data-collapse="medium"
-    role="banner" data-duration="400">
+      fs-scrolldisable-element="smart-nav" data-easing="ease" data-collapse="medium" role="banner" data-duration="400">
       <div class="navbar_container">
         <a href="./index.html" aria-current="page" class="navbar_logo-link w-nav-brand w--current">
           <div class="nav-header">Genex</div>
         </a>
         <nav role="navigation" class="navbar_menu is-page-height-tablet w-nav-menu">
-          <a href="#" class="navbar_link w-nav-link">Overview</a>
           <a href="#" class="navbar_link w-nav-link">Video Demo</a>
+          <a href="#" class="navbar_link w-nav-link">Overview</a>
           <a href="#" class="navbar_link w-nav-link">Architecture</a>
           <a href="#" class="navbar_link w-nav-link">Navigation</a>
           <a href="#" class="navbar_link w-nav-link">Evaluation</a>
@@ -68,18 +82,16 @@
                 <div class="text-align-center">
                   <div class="max-width-large align-center">
                     <div class="margin-bottom margin-small">
-                      <h1
-                        class="title-heading text-span-gradient">Generative World Explorer</h1>
+                      <h1 class="title-heading text-span-gradient">Generative World Explorer</h1>
                     </div>
-                    <p
-                      class="authors-heading">Taiming Lu, Tianmin Shu, Alan Yuille, Daniel Khashabi, Jieneng Chen</p>
+                    <p class="authors-heading">Taiming Lu, Tianmin Shu, Alan Yuille, Daniel Khashabi, Jieneng Chen</p>
                     <div class="glowing-logo">
                       <img src="images/jhu.svg" alt="JHU Logo" width="200" height="auto">
                     </div>
                     <div class="margin-top margin-small">
-                      <div class="button-group is-center"><a
-                          href="./early-access/index.html" target="_blank" class="link-bottom is-icon w-inline-block">
-                          <img src="images/arxiv-logo-white.svg" alt="arXiv Logo" width="30" height="auto">
+                      <div class="button-group is-center"><a href="https://openreview.net/pdf?id=8NlUL0Cv1L"
+                          target="_blank" class="link-bottom is-icon w-inline-block">
+                          <img src="images/arxiv-logo-white.svg" alt="arXiv Logo" width="40" height="auto">
                         </a></div>
                     </div>
                   </div>
@@ -92,7 +104,32 @@
           loading="lazy" alt="" class="hero_gradient is-hero hide">
       </header>
       <!--  -->
-    </main>
+
+      <!-- New Video Section -->
+
+      <header class="section_component">
+        <div class="text-align-center">
+          <div class="container-regular">
+            <div class="ask-component_wrapper">
+              <div class="container-large">
+                <div class="text-align-center">
+                  <h2 class="video-title svg-transparent">Watch Our Demo</h2>
+                </div>
+                <div class="video-container">
+                  <video id="demoVideo" controls width="100%" poster="images/demoPage.png">
+                    <source src="video/demo.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                  </video>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <img src="images/Sparkles.svg" loading="lazy" alt="" class="footer-sparklers svg-transparent">
+        <img src="images/Background-Gradient.svg" loading="lazy" alt="" class="hero_gradient svg-transparent fade-out">
+      </header>
+  </div>
+  </main>
   </div>
 
 
@@ -104,12 +141,24 @@
   <!-- Link to local Webflow JavaScript file -->
   <script src="js/webflow.a53fcacf4.js" type="text/javascript"></script>
   <script src="script.js" type="text/javascript"></script>
+  <script src="js/videoEffect.js"></script>
 
 
 </body>
 
 </html>
 
+
+
+
+<!-- Header -->
+<!-- <script
+    type="text/javascript">WebFont.load({ google: { families: ["Ubuntu:300,300italic,400,400italic,500,500italic,700,700italic", "Inconsolata:400,700"] } });</script>
+  <script
+    type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script> -->
+
+<!-- [Attributes by Finsweet] Disable scrolling -->
+<!-- <script defer src="https://cdn.jsdelivr.net/npm/@finsweet/attributes-scrolldisable@1/scrolldisable.js"></script> -->
 
 
 
@@ -131,8 +180,8 @@ style="-webkit-transform:translate3d(0, 30px, 0) scale3d(1, 1, 1) rotateX(0) rot
 
 
 
-  <!-- Zoom Effect -->
-  <!-- <div data-w-id="317d2f15-b598-9853-927c-25756ad3fdd2" class="section-typo-zoom-in">
+<!-- Zoom Effect -->
+<!-- <div data-w-id="317d2f15-b598-9853-927c-25756ad3fdd2" class="section-typo-zoom-in">
     <div class="typo-zoom-sticky">
       <div class="typo-zoom-sticky-inner">
         <div data-w-id="317d2f15-b598-9853-927c-25756ad3fdd5" class="typo-zoom-text-wrapper">
@@ -155,15 +204,15 @@ style="-webkit-transform:translate3d(0, 30px, 0) scale3d(1, 1, 1) rotateX(0) rot
   </div> -->
 
 <!-- Headers -->
-  <!-- <link href="https://cdn.prod.website-files.com/666c58d71e64e2eb5bdf950b/css/simular-v2.webflow.59eb39cf2.min.css"
+<!-- <link href="https://cdn.prod.website-files.com/666c58d71e64e2eb5bdf950b/css/simular-v2.webflow.59eb39cf2.min.css"
     rel="stylesheet" type="text/css"> -->
-  <!-- <link href="https://fonts.googleapis.com/" rel="preconnect">
+<!-- <link href="https://fonts.googleapis.com/" rel="preconnect">
   <link href="https://fonts.gstatic.com/" rel="preconnect" crossorigin="anonymous"> -->
-  <!-- <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script> -->
-  <!-- <link
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script> -->
+<!-- <link
     href="https://cdn.prod.website-files.com/666c58d71e64e2eb5bdf950b/666d518f82ee72bd2ccb5de4_base_icon_transparent_background%20copy.png"
     rel="shortcut icon" type="image/x-icon"> -->
-  <!-- <link
+<!-- <link
     href="https://cdn.prod.website-files.com/666c58d71e64e2eb5bdf950b/666d51a6d48d2769216bb0ac_base_icon_transparent_background%20copy%202.png"
     rel="apple-touch-icon"> -->
 
@@ -171,7 +220,7 @@ style="-webkit-transform:translate3d(0, 30px, 0) scale3d(1, 1, 1) rotateX(0) rot
 
 
 <!-- Header Icon -->
-    <!-- <a href="./index.html" aria-current="page" class="navbar_logo-link w-nav-brand w--current">
+<!-- <a href="./index.html" aria-current="page" class="navbar_logo-link w-nav-brand w--current">
   <img src="https://cdn.prod.website-files.com/666c58d71e64e2eb5bdf950b/666c5b2d6afdf99e6f2c5e3a_image%2015.svg"
     loading="lazy" alt="" class="navbar_logo"></a> -->
 
@@ -223,8 +272,8 @@ style="-webkit-transform:translate3d(0, 30px, 0) scale3d(1, 1, 1) rotateX(0) rot
   </svg></div> -->
 
 
-  <!-- Animated Demo -->
-  <!-- <div class="header_image-wrapper align-center">
+<!-- Animated Demo -->
+<!-- <div class="header_image-wrapper align-center">
   <div class="header_lottie" data-w-id="ecdcd8e7-15bc-0c0d-d0d3-6c50b12942e0" data-animation-type="lottie"
     data-src="https://cdn.prod.website-files.com/666c58d71e64e2eb5bdf950b/666c7ab6b54878854598cbfa_Simular.json"
     data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg"
@@ -289,7 +338,7 @@ style="-webkit-transform:translate3d(0, 30px, 0) scale3d(1, 1, 1) rotateX(0) rot
 
 
 <!-- Other Components -->
-      <!-- <header class="section_chat">
+<!-- <header class="section_chat">
         <div class="padding-global">
           <div class="container-large">
             <div class="padding-section-large">
@@ -546,7 +595,7 @@ style="-webkit-transform:translate3d(0, 30px, 0) scale3d(1, 1, 1) rotateX(0) rot
 
 
 
-            <!-- <div class="section-hero">
+<!-- <div class="section-hero">
         <div class="padding-global padding-section-new-hero">
           <div class="container-large">
             <div class="hero_container">
@@ -634,7 +683,7 @@ style="-webkit-transform:translate3d(0, 30px, 0) scale3d(1, 1, 1) rotateX(0) rot
 
 
 
-        <!-- <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=666c58d71e64e2eb5bdf950b"
+<!-- <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=666c58d71e64e2eb5bdf950b"
     type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
     crossorigin="anonymous"></script>
   <script src="https://cdn.prod.website-files.com/666c58d71e64e2eb5bdf950b/js/webflow.a53fcacf4.js"
