--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <div class="margin-bottom margin-small">
                       <h1 class="title-heading text-span-gradient">Generative World Explorer</h1>
                     </div>
-                    <p class="authors-heading">Taiming Lu, Tianmin Shu, Alan Yuille, Daniel Khashabi, Jieneng Chen</p>
+                    <p class="authors-heading">Taiming Lu, Tianmin Shu, Daniel Khashabi, Alan Yuille, Jieneng Chen</p>
                     <div class="glowing-logo">
                       <img src="images/jhu.svg" alt="JHU Logo" width="200" height="auto">
                     </div>
