update video link

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <div class="container-large">
                   <div class="video-container">
                     <video id="demoVideo" controls width="100%" poster="images/demoPage.png">
-                      <source src="video/demo.mp4" type="video/mp4"> 
+                      <source src="https://dl.dropboxusercontent.com/scl/fi/rma9wi8bor55wpq8etd41/demo.mp4?rlkey=2nldg5owz8mhfuakduftgrkup&st=trcfu77g&dl=0" type="video/mp4"> 
                       Your browser does not support the video tag.
                     </video>
                   </div>
